[gd_scene load_steps=11 format=1]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Spinner.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/black_ready.png" type="Texture" id=3]
[ext_resource path="res://assets/red_ready.png" type="Texture" id=4]
[ext_resource path="res://assets/yellow_ready.png" type="Texture" id=5]
[ext_resource path="res://scripts/speedbar.gd" type="Script" id=6]
[ext_resource path="res://assets/font100.fnt" type="BitmapFont" id=7]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.478431, 0.478431, 0.478431, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.478431, 0.478431, 0.478431, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[node name="Game" type="Node"]

script/script = ExtResource( 1 )

[node name="Spinner1" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 360, 1000 )
transform/rot = 180.0

[node name="Spinner2" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 360, 280 )

[node name="Control" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Panel" type="Panel" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 630.0
margin/right = 720.0
margin/bottom = 650.0
custom_styles/panel = SubResource( 1 )

[node name="player1" type="Control" parent="Control"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="btnblack" type="TextureButton" parent="Control/player1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 620.0
margin/top = 650.0
margin/right = 720.0
margin/bottom = 750.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="btnred" type="TextureButton" parent="Control/player1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 620.0
margin/top = 735.0
margin/right = 720.0
margin/bottom = 835.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="btnyelou" type="TextureButton" parent="Control/player1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 620.0
margin/top = 820.0
margin/right = 720.0
margin/bottom = 920.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Speed" type="ProgressBar" parent="Control/player1"]

rect/rotation = -90.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 650.0
margin/right = 710.0
margin/bottom = 730.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 50.0
range/exp_edit = false
range/rounded = false
percent/visible = false
script/script = ExtResource( 6 )

[node name="Score" type="Label" parent="Control/player1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 650.0
margin/right = 720.0
margin/bottom = 757.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.478431, 0.478431, 0.478431, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Msg" type="Label" parent="Control/player1"]

rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 742.0
margin/right = 998.0
margin/bottom = 849.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.478431, 0.478431, 0.478431, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="player2" type="Control" parent="Control"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="btnblack" type="TextureButton" parent="Control/player2"]

rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 630.0
margin/right = 200.0
margin/bottom = 730.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="btnred" type="TextureButton" parent="Control/player2"]

rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 545.0
margin/right = 200.0
margin/bottom = 645.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="btnyelou" type="TextureButton" parent="Control/player2"]

rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 460.0
margin/right = 200.0
margin/bottom = 560.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Speed" type="ProgressBar" parent="Control/player2"]

rect/rotation = 90.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 640.0
margin/top = 630.0
margin/right = 1270.0
margin/bottom = 710.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 50.0
range/exp_edit = false
range/rounded = false
percent/visible = false
script/script = ExtResource( 6 )

[node name="Score" type="Label" parent="Control/player2"]

rect/rotation = 180.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 720.0
margin/top = 630.0
margin/right = 1440.0
margin/bottom = 737.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.478431, 0.478431, 0.478431, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Msg" type="Label" parent="Control/player2"]

rect/rotation = 180.0
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 637.0
margin/top = 542.0
margin/right = 1555.0
margin/bottom = 649.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.478431, 0.478431, 0.478431, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EntreRound" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="block" from="." to="Spinner1" method="_on_Game_block"]

[connection signal="block" from="." to="Spinner2" method="_on_Game_block"]

[connection signal="unblock" from="." to="Spinner1" method="_on_Game_unblock"]

[connection signal="unblock" from="." to="Spinner2" method="_on_Game_unblock"]

[connection signal="limit" from="Spinner1" to="." method="_on_Spinner1_limit"]

[connection signal="speed" from="Spinner1" to="Control/player1/Speed" method="_on_Spinner_speed"]

[connection signal="zero" from="Spinner1" to="." method="_on_Spinner1_zero"]

[connection signal="limit" from="Spinner2" to="." method="_on_Spinner2_limit"]

[connection signal="speed" from="Spinner2" to="Control/player2/Speed" method="_on_Spinner_speed"]

[connection signal="zero" from="Spinner2" to="." method="_on_Spinner2_zero"]

[connection signal="pressed" from="Control/player1/btnblack" to="Spinner1" method="_on_btnblack_pressed"]

[connection signal="pressed" from="Control/player1/btnred" to="Spinner1" method="_on_btnred_pressed"]

[connection signal="pressed" from="Control/player1/btnyelou" to="Spinner1" method="_on_btnyelou_pressed"]

[connection signal="pressed" from="Control/player2/btnblack" to="Spinner2" method="_on_btnblack_pressed"]

[connection signal="pressed" from="Control/player2/btnred" to="Spinner2" method="_on_btnred_pressed"]

[connection signal="pressed" from="Control/player2/btnyelou" to="Spinner2" method="_on_btnyelou_pressed"]

[connection signal="timeout" from="EntreRound" to="." method="_on_EntreRound_timeout"]


